# openharmony_icar

./: README.md
hihope/HIHOPE-HH-SLHSP104/: BUILD.gn  config.json  ohos.build
hihope/HIHOPE-HH-SLHSP104/demo/: BUILD.gn
hihope/HIHOPE-HH-SLHSP104/demo/all_my_car_down/: BUILD.gn  main.c
hihope/HIHOPE-HH-SLHSP104/demo/all_my_car_down/app/: app_mecanum.h  app_motion.c  app_pid.c  app_pid.h
hihope/HIHOPE-HH-SLHSP104/demo/all_my_car_down/bsp/: bsp_encoder.c  bsp_motor.h  bsp_tracing.c
hihope/HIHOPE-HH-SLHSP104/demo/all_my_car_down/bsp_beep/: bsp_beep.c  bsp_beep.h
hihope/HIHOPE-HH-SLHSP104/demo/all_my_car_down/sensor/: bme280.c  bme280.h  i2c_application.c  i2c_application.h  sensor.c  sensor.h  smoker_pm2.5_light.h  tem_hum.c  tem_hum.h
hihope/HIHOPE-HH-SLHSP104/demo/all_my_car_down/uart7_gps/: uart7_gps.c  uart7_gps.h
hihope/HIHOPE-HH-SLHSP104/demo/all_my_car_down/uartcall/: beeping.c  beeping.h  set_car_motion.c  set_car_motion.h  set_car_run.c  set_car_run.h  set_motor.c  set_motor.h  tracing.c  tracing.h
hihope/HIHOPE-HH-SLHSP104/demo/all_my_car_down/usart1/: protocol.c  protocol.h  usart1.c
hihope/HIHOPE-HH-SLHSP104/demo/all_my_car_down/usart3/: usart3.c  usart3.h
hihope/HIHOPE-HH-SLHSP104/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c  vendor.para
hihope/HIHOPE-HH-SLHSP104/hals/utils/token/: BUILD.gn
hihope/HIHOPE-HH-SLHSP104/kernel_configs/: debug.config
hihope/HIHOPE-HH-SLHSP104/practice_demo/PM25/: gas.c  main.c  pm25.c  pm25.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/bme280/: bme280.c  bme280.h  main.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/car_beep_demo/: BUILD.gn  bsp_beep.c  bsp_beep.h  main.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/car_led_demo/: BUILD.gn  car_lights.c  car_lights.h  main.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/delay_demo/: BUILD.gn  delay.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/gas_demo/: gas.c  gas.h  main.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/hw_could_dmeo/: BUILD.gn  main.c  sensor.c  sensor.h  smoker_pm2.5_light.c  usart3.c  usart3.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/icar/: BUILD.gn  main.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/icar/app/: app_angle.c  app_angle.h  app_math.c  app_math.h  app_mecanum.c  app_motion.c  app_motion.h  protocol.c  protocol.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/icar/battery/: README.md  battery_info.c  battery_info.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/icar/bsp/: bsp_battery.c  bsp_battery.h  bsp_beep.c  bsp_beep.h  bsp_car_lights.c  bsp_car_lights.h  bsp_encoder.c  bsp_encoder.h  bsp_iic_soft.c  bsp_iic_soft.h  bsp_mpu9250.c  bsp_mpu9250.h  bsp_pid.c  bsp_pid.h  bsp_robotic_arm.c  bsp_robotic_arm.h  bsp_timer14.c  bsp_timer14.h  bsp_tracing.c  bsp_tracing.h  usart1.c  usart3.c  usart3.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/icar/car/: bsp_car_lights.c  bsp_car_lights.h  car_tracing.c  car_tracing.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/led_demo/: BUILD.gn  bsp_led.c  bsp_led.h  main.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/light_demo/: light_ill.c  light_ill.h  main.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/light_ill/: light_ill.c  light_ill.h  main.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/message_demo/: BUILD.gn  message.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/motor_demo/: BUILD.gn  main.c  motor.c  motor.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/mutex_demo/: BUILD.gn  mutex.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/semaphore_demo/: BUILD.gn  semp.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/tem_hum/: i2c_application.c  i2c_application.h  main.c  tem_hum.c  tem_hum.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/thread_demo/: BUILD.gn  thread.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/trace_demo/: BUILD.gn  main.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/trace_demo/app/: app_mecanum.c  app_motion.c  app_motion.h  app_pid.c
hihope/HIHOPE-HH-SLHSP104/practice_demo/trace_demo/bsp/: bsp_motor.c  bsp_tracing.c  bsp_tracing.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/uart1_demo/: BUILD.gn  main.c  uart1.c  uart1.h  usart1.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/uart7_demo/: BUILD.gn  main.c  uart.c  uart.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/uart7_gps/: main.c  uart7_gps.c  uart7_gps.h
hihope/HIHOPE-HH-SLHSP104/practice_demo/uart8_nb/: main.c  uart8_nb.c  uart8_nb.h
icar_web/demo_integration/: aiserver.py  app.py  rosmaster_main.py
icar_web/icar_back/: client_conf.py  mqtt_client.py  mqtt_forwarder.py  requirements.txt  tcp_forwarder.py
icar_web/icar_front/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
icar_web/icar_front/src/: App.tsx  index.css
icar_web/icar_front/src/components/: ControllerPanel.tsx  StatusPanel.tsx  index.ts
sample/wifi-iot/app/: BUILD.gn
sample/wifi-iot/app/at32_wifi/: BUILD.gn  main.c
sample/wifi-iot/app/tcp_client_demo/: BUILD.gn  tcp_client_demo.c
sample/wifi-iot/app/tcp_client_demo/wifi/: wifi_connect.c  wifi_connect.h
sample/wifi-iot/app/tcp_server_demo/: BUILD.gn  tcp_server_demo.c
sample/wifi-iot/app/wifi_demo/: BUILD.gn  main.c  wifi_connect.c  wifi_connect.h
