static_library("hw_could_dmeo") {
  sources = [

    #主文件
    "main.c",
    #传感器
    "smoker_pm2.5_light.c",
    "sensor.c",
    #uart
    "usart3.c",
  ]

  #添加cjson三方库依赖      
  deps = [
    "//build/lite/config/component/cJSON:cjson_static", 
  ]

  include_dirs = [
    "//third_party/cJSON/",
    "//commonlibrary/utils_lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/artery/at32f4xx/libraries/drivers/inc",
  ]
}