static_library("trace_demo") {
  sources = [
    "main.c",
    #bsp
   "bsp/bsp_encoder.c",
   "bsp/bsp_motor.c",
    #小车循迹
    "bsp/bsp_tracing.c",
    #app
    "app/app_pid.c",
    "app/app_motion.c",
    "app/app_mecanum.c",
  ]


  include_dirs = [

    "//third_party/jerryscript",#加入数学库
    "//third_party/musl",#数学库
    "//commonlibrary/utils_lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/artery/at32f4xx/liteos_m/include",
    # 中断函数存放的路径
    "//device/soc/artery/at32f4xx/liteos_m/src/main/main_usart",   
    ".",
    "./bsp",
    "./app",
  ]
}
